--- a/css/style.css
+++ b/css/style.css
@@ -78,3 +78,11 @@
     background-color: rgb(59, 45, 255) !important;
     color: #fff;
 }
+
+.review_page .reviewContent{
+    color: green;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70vh;
+}
