--- a/css/style.css
+++ b/css/style.css
@@ -42,12 +42,25 @@
     justify-content: space-between;
 }
 
-.third_page .addMore button{
+.addMore{
+    position: relative;
+}
+
+.addMore input{
+    padding: 11px 18px;
+    background: transparent;
     outline: none;
-    background-color: transparent;
-    border: 3px solid black;
-    padding: 10px 12px;
+    border: 1px solid gray;
     border-radius: 50%;
+    margin: 10px 0;
+    cursor: pointer;
+}
+
+.addMore i{
+    position: absolute;
+    left: 12.5px;
+    top: 21px;
+    z-index: -1;
 }
 
 .sameSelect{
