--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
     padding-top: 20px;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 .container .btns span{
     padding: 4px 9px;
@@ -66,6 +67,9 @@
 .sameSelect{
     display: flex;
     gap: 3rem;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .third_page_btns{
