--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 .container .btns span{
     padding: 4px 9px;
     background-color: #fefefe;
-    border: 1px solid black;
+    outline: 1px solid black;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     user-select: none;
 }
@@ -92,7 +92,7 @@
 }
 
 .color_class{
-    background-color: rgb(59, 45, 255) !important;
+    background-color: rgb(253, 112, 30) !important;
     color: #fff;
 }
 
@@ -102,4 +102,25 @@
     justify-content: center;
     align-items: center;
     height: 70vh;
+}
+table{
+    padding: 30px 0 0 0;
+    font-size: 17px;
+    font-weight: bold;
+}
+
+.specials_border,.same_data{
+    display: flex;
+    gap: 3rem;
+}
+.second_col{
+    border: 1px solid black;
+    padding: 0.5rem;
+}
+.same_data{
+    gap: 1rem;
+}
+
+.last_page_btns{
+    padding-top: 20px;
 }
