--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,6 @@ body {
     font-family: 'Merriweather Sans', sans-serif;
     font-weight: 400;
     line-height: 1.714;
-    color: #616f7d;
     overflow-x: hidden; 
 }
 h1, h2, h3, h4, h5, h6 {
@@ -12,4 +11,4 @@ h1, h2, h3, h4, h5, h6 {
 
 @import './color';
 @import './header_branding';
-@import './mixin';
+@import './story';
